--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--CSS-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -23,7 +23,7 @@
     <div class="container-fluid ">
         <!-- Nav bar -->
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom justify-content-around ">
+        <nav class="navbar fixed-top  navbar-expand-lg navbar-light bg-light border-bottom justify-content-around mb-2">
 
             <!-- Nav Left Area- Logo Instagram -->
             <i class="fab fa-instagram text-secondary ml-5 " style="font-size: 1.5rem;"> Instagram</i>
@@ -57,20 +57,26 @@
         </nav>
 
         <!-- Nav tabs - Para mostrar el contenido de las dos paginas-->
-        <ul class="nav nav-tabs d-flex justify-content-center pt-3 pb-3" id="myTab" role="tablist">
+        <ul class="nav nav-tabs d-flex justify-content-center  mt-2 pt-5 pb-1 border-0 " id="myTab" role="tablist">
             <li class=" nav-item">
-                <a class=" active fas fa-th-large pr-3 text-secondary" id="home-tab" data-toggle="tab" href="#home"
-                    role="tab" aria-controls="home" aria-selected="true"></a>
+                <a class="active  pr-1" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+                    aria-selected="true">
+                    <i class="select_tab fas fa-th"></i>
+                </a>
             </li>
             <li class=" nav-item">
-                <a class=" fas fa-square text-secondary" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                    aria-controls="profile" aria-selected="false"></a>
+                <a class="" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+                    aria-selected="false">
+                    <i class="select_tab fas fa-square"></i>
+                </a>
             </li>
         </ul>
 
+
+
         <!-- Tab panes -->
         <div class="tab-content">
-            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="tab-pane fade " id="home" role="tabpanel" aria-labelledby="home-tab">
                 <!-- Pictures -->
 
                 <!-- Row 1 -->
@@ -94,62 +100,99 @@
 
                 </div>
             </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                <!-- Photo Fed 1 card mx-auto:center mt-5:margin top -->
-                <div class="card mx-auto mt-4 mb-3 " style="width: 30rem;">
+            <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                <!-- Photo Fed 1 card mx-auto:center-->
+                <div class="bg-light">
+                    <div class="card mx-auto mb-5 " style="width: 30rem;">
 
-                    <div class="card-body ">
-                        <!-- Header -->
-                        <div class="row justify-content-between ">
-                            <h6 class="card-title ml-3">My first photo</h6>
-                            <span class=" text-secondary text-right mr-3">12/01</span>
-                        </div>
-                        <!-- Photo -->
-                        <img src=" https://i.pinimg.com/originals/0d/30/26/0d302675385718a767edb13f333b3eba.jpg "
-                            class="rounded mx-auto d-block" style=" width: 100%;">
-                        <!-- Description-->
-                        <p class="card-text_1 ">20 likes</p>
-                        <p class="card-text_2 ">Some quick example text to build on the card title and make
-                            up
-                            the
-                            bulk of the card's content.</p>
-                        <!-- Footer -->
-                        <div class="row justify-content-between">
-                            <!-- left Area- heart icon + comments -->
-                            <i class="  far fa-heart ml-3 text-secondary"> Comments...</i>
-                            <!--Right Area- vertical dots icon -->
-                            <i class=" fas fa-ellipsis-v mr-3 text-secondary"></i>
+                        <div class="card-body mt-1">
+                            <!-- Header -->
+                            <div class="row justify-content-between ">
+                                <h6 class="card-title ml-3">My first photo</h6>
+                                <span class=" text-secondary text-right mr-3">12/01</span>
+                            </div>
+                            <!-- Photo -->
+                            <img src=" https://i.pinimg.com/originals/0d/30/26/0d302675385718a767edb13f333b3eba.jpg "
+                                class="rounded mx-auto d-block" style=" width: 100%;">
+                            <!-- Description-->
+                            <p class="card-text_1 ">20 likes</p>
+                            <p class="card-text_2 ">Some quick example text to build on the card title and make
+                                up
+                                the
+                                bulk of the card's content.</p>
+                            <!-- Footer -->
+                            <div class="row justify-content-between">
+                                <!-- left Area- heart icon + comments -->
+                                <i class="  far fa-heart ml-3 text-secondary"> Comments...</i>
+                                <!--Right Area- vertical dots icon -->
+                                <i class=" fas fa-ellipsis-v mr-3 text-secondary"></i>
 
-                        </div>
-                    </div>
-                </div>
-                <!-- Photo Fed 2 card mx-auto:center mt-5:margin top -->
-                <div class="postcard mx-auto mt-4 mb-3 " style="width: 30rem;">
-
-                    <div class="card-body ">
-                        <!-- Header -->
-                        <div class="row justify-content-between ">
-                            <h6 class="card-title ml-3">My first photo</h6>
-                            <span class=" text-secondary text-right mr-3">12/01</span>
-                        </div>
-                        <!-- Photo -->
-                        <img src=" https://cdn.pixabay.com/photo/2014/10/15/15/14/man-489744__340.jpg"
-                            class="rounded mx-auto d-block" style=" width: 100%;">
-                        <!-- Description-->
-                        <p class="card-text_1 ">20 likes</p>
-                        <p class="card-text_2 ">Some quick example text to build on the card title and make
-                            up
-                            the
-                            bulk of the card's content.</p>
-                        <!-- Footer -->
-                        <div class="row justify-content-between">
-                            <!-- left Area- heart icon + comments -->
-                            <i class="  far fa-heart ml-3 text-secondary"> Comments...</i>
-                            <!--Right Area- vertical dots icon -->
-                            <i class=" fas fa-ellipsis-v mr-3 text-secondary"></i>
-
+                            </div>
                         </div>
                     </div>
+
+
+   <!-- Photo Fed 2 card mx-auto:center mt-5:margin top -->
+                    <div class="card mx-auto mb-5 " style="width: 30rem;">
+
+                        <div class="card-body mt-1">
+                            <!-- Header -->
+                            <div class="row justify-content-between ">
+                                <h6 class="card-title ml-3">My first photo</h6>
+                                <span class=" text-secondary text-right mr-3">12/01</span>
+                            </div>
+                            <!-- Photo -->
+                            <img src=" https://cdn.pixabay.com/photo/2014/10/15/15/14/man-489744__340.jpg"
+                                class="rounded mx-auto d-block" style=" width: 100%;">
+                            <!-- Description-->
+                            <p class="card-text_1 ">20 likes</p>
+                            <p class="card-text_2 ">Some quick example text to build on the card title and make
+                                up
+                                the
+                                bulk of the card's content.</p>
+                            <!-- Footer -->
+                            <div class="row justify-content-between">
+                                <!-- left Area- heart icon + comments -->
+                                <i class="  far fa-heart ml-3 text-secondary"> Comments...</i>
+                                <!--Right Area- vertical dots icon -->
+                                <i class=" fas fa-ellipsis-v mr-3 text-secondary"></i>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+<!-- Photo Fed 2 card mx-auto:center mt-5:margin top -->
+                    <div class="card mx-auto mb-5 " style="width: 30rem;">
+
+                        <div class="card-body mt-1">
+                            <!-- Header -->
+                            <div class="row justify-content-between ">
+                                <h6 class="card-title ml-3">My first photo</h6>
+                                <span class=" text-secondary text-right mr-3">12/01</span>
+                            </div>
+                            <!-- Photo -->
+                            <img src=" https://cdn.pixabay.com/photo/2021/01/07/22/15/dandelion-5898546__340.jpg"
+                                class="rounded mx-auto d-block" style=" width: 100%;">
+                            <!-- Description-->
+                            <p class="card-text_1 ">20 likes</p>
+                            <p class="card-text_2 ">Some quick example text to build on the card title and make
+                                up
+                                the
+                                bulk of the card's content.</p>
+                            <!-- Footer -->
+                            <div class="row justify-content-between">
+                                <!-- left Area- heart icon + comments -->
+                                <i class="  far fa-heart ml-3 text-secondary"> Comments...</i>
+                                <!--Right Area- vertical dots icon -->
+                                <i class=" fas fa-ellipsis-v mr-3 text-secondary"></i>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+
                 </div>
             </div>
 
